<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SOS Click</string>
    <string name="action_settings">Settings</string>
	<string name="btEntrar">Entrar</string>
    <string name="btNovoUsuario">Novo Usuário</string>
    <string name="btCadastrarNovoUsuario">Cadastrar Novo Usuário</string>
    <string name="menu">Menu</string>
    <string name="background">Background</string>
    <string name="usuario">Usuário</string>
    <string name="planodesaude">Plano de Saúde</string>
    <string name="socorristas">Socorristas</string>
    <string name="saude">Saúde</string>
    <string name="login">Login</string>
    <string name="txtEmptySenha">Senha</string>
    <string name="txtEmptyUsuario">Usuário</string>
    <string name="facebook_app_id">305374419667233</string>
    <string name="informacoes">Informações</string>
    <string name="alertaBackgroundService">Serviço background</string>
    
	<string name="cadastro_usuario">Cadastro de Usuário</string>
	<string name="cadastro_saude_usuario">Cadastro da Saúde do Usuário</string>
	<string name="txtEmptyNome">Nome………</string>
	<string name="txtEmptyEmail">E-mail………</string>
	<string name="txtEmptyTelefone">Telefone………</string>
    <string name="bitPadrao">Padrão</string>
	<string name="bitHipertenso">Hipertenso</string>
	<string name="bitHipotenso">Hipotenso</string>
	<string name="flagDiabete">Diabético ?</string>
	<string name="txtEmptyMedicacoes">Quais………</string>
	<string name="flagMedicacao">Toma medicação regularmente ?</string>
	<string name="txtEmptyAlergias">Descreva………</string>
	<string name="flagAlergia">Alérgico ?</string>
	<string name="txtEmptyDescricaoUsuario">Descrições………</string>
	<string name="btSalvar">Salvar</string>
	<string name="alert">Alert</string>
	<string name="cadastro_plano_saude">Cadastro do Plano de Saúde</string>
	<string name="txtEmptyConvenio">Convenio………</string>
	<string name="txtEmptyPlano">Plano………</string>
	<string name="txtEmptyDescricao">Descrição do Plano de Saude………</string>
	<string name="cadastro_socorrista">Cadastro do Socorrista</string>
</resources>
